--- a/Info.plist
+++ b/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>app_icon_iphone4.png</string>
+	<string>app_icon_iphone.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.pentagram.blackbook</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -24,11 +24,11 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIApplicationExitsOnSuspend</key>
+	<false/>
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
-	<key>UIApplicationExitsOnSuspend</key>
-	<true />
 </dict>
 </plist>
